--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ img {
     display: none;
 }
 /* ingredients list styling */
-#ingridients-list {
+#ingredient-list {
     list-style-type: none;
     padding: 0;
     margin-top: 10px;
